# optik_kinematics_plugin

./: CMakeLists.txt  optik_kinematics_description.xml  package.xml
include/: optik_kinematics_plugin.hpp
src/: optik_kinematics_plugin.cpp
